--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.58.0",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "convex": "^1.27.3",
