--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "convex": "^1.27.3",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
     "playwright": "^1.55.1",
     "playwright-extra": "^4.3.6",
     "playwright-extra-plugin-stealth": "^0.0.1",
@@ -22,6 +24,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.1.1",
     "tough-cookie": "^6.0.0"
   },
   "devDependencies": {
