--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,15 @@
   "crons": [
     {
       "path": "/api/cron/bse-scraper",
-      "schedule": "*/5 * * * *"
+      "schedule": "0 */5 * * * *"
+    },
+    {
+      "path": "/api/cron/nse-scraper",
+      "schedule": "0 */5 * * * *"
+    },
+    {
+      "path": "/api/cron/bse-bulk-deals",
+      "schedule": "0 */5 * * * *"
     }
   ]
 }
