fixes for chatbot and unified data

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,19 @@
   "crons": [
     {
       "path": "/api/cron/bse-scraper",
-      "schedule": "0 0 * * *"
+      "schedule": "*/5 * * * *"
     },
     {
       "path": "/api/cron/nse-scraper",
-      "schedule": "0 0 * * *"
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/bse-bulk-deals",
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/bse-corporate-actions",
+      "schedule": "*/5 * * * *"
     }
   ]
 }
