--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "crons": [
     {
       "path": "/api/cron/bse-scraper",
-      "schedule": "*/5 * * * *"
+      "schedule": "0 0 * * *"
     },
     {
       "path": "/api/cron/bse-bulk-deals",
-      "schedule": "*/5 * * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
